--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js" 
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/kevincalmo/first-nodejs-server/issues"
   },
-  "homepage": "https://github.com/kevincalmo/first-nodejs-server#readme"
+  "homepage": "https://github.com/kevincalmo/first-nodejs-server#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.16"
+  }
 }
